@@ -1,3 +1,5 @@
+- call aria2 with brand-new --uri-selector=adaptive
+
 Version 6.5 - 1 September 2008, Thierry Vignaud
 
 - all tools
